--- a/BankSelenium/test-output/old/Default suite/methods-alphabetical.html
+++ b/BankSelenium/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="afa0ac">  <td>18/10/05 13:52:46</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;EditAccount.init()[pri:0, instance:main.java.bank.testcases.EditAccount@7cd62f43]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@701141022</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>18/10/05 13:53:36</td>   <td>50322</td> <td>&nbsp;</td><td title="&lt;&lt;EditAccount.tearDown()[pri:0, instance:main.java.bank.testcases.EditAccount@7cd62f43]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@701141022</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>18/10/05 13:52:53</td>   <td>6783</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditAccount.verifyEditAccount()[pri:0, instance:main.java.bank.testcases.EditAccount@7cd62f43]">verifyEditAccount</td> 
-  <td>main@701141022</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>18/10/05 13:53:03</td>   <td>16967</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditAccount.verifyLogOut()[pri:0, instance:main.java.bank.testcases.EditAccount@7cd62f43]">verifyLogOut</td> 
-  <td>main@701141022</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>18/10/05 13:53:10</td>   <td>23792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditAccount.verifyUserCreated()[pri:0, instance:main.java.bank.testcases.EditAccount@7cd62f43]">verifyUserCreated</td> 
-  <td>main@701141022</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/10/08 13:46:55</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;MiniStatement.init()[pri:0, instance:main.java.bank.testcases.user.ministatement.MiniStatement@7cd62f43]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/10/08 13:47:11</td>   <td>16174</td> <td>&nbsp;</td><td title="&lt;&lt;MiniStatement.tearDown()[pri:0, instance:main.java.bank.testcases.user.ministatement.MiniStatement@7cd62f43]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/10/08 13:47:02</td>   <td>7503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MiniStatement.verifyMiniStatement()[pri:0, instance:main.java.bank.testcases.user.ministatement.MiniStatement@7cd62f43]">verifyMiniStatement</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
 </table>
