--- a/BankSelenium/test-output/old/Default suite/classes.html
+++ b/BankSelenium/test-output/old/Default suite/classes.html
@@ -4,14 +4,22 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>main.java.bank.testcases.user.ministatement.MiniStatement</td>
+<td>main.java.bank.testcases.user.CustomisedStatement</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyMiniStatement</td>
+<td>verifyOnNotExistAccNo</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyStatementOnWrongAcc</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyOnWrongDateInput</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
