--- a/BankSelenium/test-output/emailable-report.html
+++ b/BankSelenium/test-output/emailable-report.html
@@ -9,10 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">16.972</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">27.913</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">main.java.bank.testcases.user.ministatement.MiniStatement</td><td><a href="#m0">verifyMiniStatement</a></td><td rowspan="1">1538999222670</td><td rowspan="1">8667</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">main.java.bank.testcases.user.CustomisedStatement</td><td><a href="#m0">verifyOnNotExistAccNo</a></td><td rowspan="1">1539070589100</td><td rowspan="1">4700</td></tr><tr class="passedeven"><td><a href="#m1">verifyOnWrongDateInput</a></td><td rowspan="1">1539070593809</td><td rowspan="1">5059</td></tr><tr class="passedeven"><td><a href="#m2">verifyStatementOnWrongAcc</a></td><td rowspan="1">1539070578318</td><td rowspan="1">10774</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">main.java.bank.testcases.user.ministatement.MiniStatement#verifyMiniStatement</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">main.java.bank.testcases.user.CustomisedStatement#verifyOnNotExistAccNo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">main.java.bank.testcases.user.CustomisedStatement#verifyOnWrongDateInput</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">main.java.bank.testcases.user.CustomisedStatement#verifyStatementOnWrongAcc</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
