--- a/BankSelenium/test-output/index.html
+++ b/BankSelenium/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\X240\AppData\Local\Temp\testng-eclipse-1361592980\testng-customsuite.xml</span>
+                    <span>C:\Users\X240\AppData\Local\Temp\testng-eclipse-1853744168\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="main.java.bank.testcases.user.ministatement.MiniStatement" hash-for-method="verifyMiniStatement">verifyMiniStatement</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="main.java.bank.testcases.user.CustomisedStatement" hash-for-method="verifyOnNotExistAccNo">verifyOnNotExistAccNo</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="main.java.bank.testcases.user.CustomisedStatement" hash-for-method="verifyOnWrongDateInput">verifyOnWrongDateInput</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="main.java.bank.testcases.user.CustomisedStatement" hash-for-method="verifyStatementOnWrongAcc">verifyStatementOnWrongAcc</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +130,28 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">main.java.bank.testcases.user.ministatement.MiniStatement</span>
+              <span class="class-name">main.java.bank.testcases.user.CustomisedStatement</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyMiniStatement">
-                  </a> <!-- verifyMiniStatement -->
-                  <span class="method-name">verifyMiniStatement</span>
+                  <a name="verifyOnNotExistAccNo">
+                  </a> <!-- verifyOnNotExistAccNo -->
+                  <span class="method-name">verifyOnNotExistAccNo</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyOnWrongDateInput">
+                  </a> <!-- verifyOnWrongDateInput -->
+                  <span class="method-name">verifyOnWrongDateInput</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyStatementOnWrongAcc">
+                  </a> <!-- verifyStatementOnWrongAcc -->
+                  <span class="method-name">verifyStatementOnWrongAcc</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +159,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\X240\AppData\Local\Temp\testng-eclipse-1361592980\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\X240\AppData\Local\Temp\testng-eclipse-1853744168\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +168,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;main.java.bank.testcases.user.ministatement.MiniStatement&quot;/&gt;
+      &lt;class name=&quot;main.java.bank.testcases.user.CustomisedStatement&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -184,16 +208,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyMiniStatement')
-data.setCell(0, 2, 'main.java.bank.testcases.user.ministatement.MiniStatement')
-data.setCell(0, 3, 8667);
+data.setCell(0, 1, 'verifyStatementOnWrongAcc')
+data.setCell(0, 2, 'main.java.bank.testcases.user.CustomisedStatement')
+data.setCell(0, 3, 10774);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'verifyOnWrongDateInput')
+data.setCell(1, 2, 'main.java.bank.testcases.user.CustomisedStatement')
+data.setCell(1, 3, 5059);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'verifyOnNotExistAccNo')
+data.setCell(2, 2, 'main.java.bank.testcases.user.CustomisedStatement')
+data.setCell(2, 3, 4700);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 20 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,18 +251,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">main.java.bank.testcases.user.ministatement.MiniStatement</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">main.java.bank.testcases.user.CustomisedStatement</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">init</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">verifyMiniStatement</span>
-                <span class="method-start">7511 ms</span>
+                <span class="method-name">verifyStatementOnWrongAcc</span>
+                <span class="method-start">6560 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verifyOnNotExistAccNo</span>
+                <span class="method-start">17342 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verifyOnWrongDateInput</span>
+                <span class="method-start">22051 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">16181 ms</span>
+                <span class="method-start">27115 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
