--- a/BankSelenium/test-output/old/Default suite/methods-alphabetical.html
+++ b/BankSelenium/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="afa0ac">  <td>18/10/08 13:46:55</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;MiniStatement.init()[pri:0, instance:main.java.bank.testcases.user.ministatement.MiniStatement@7cd62f43]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>18/10/08 13:47:11</td>   <td>16174</td> <td>&nbsp;</td><td title="&lt;&lt;MiniStatement.tearDown()[pri:0, instance:main.java.bank.testcases.user.ministatement.MiniStatement@7cd62f43]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>18/10/08 13:47:02</td>   <td>7503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MiniStatement.verifyMiniStatement()[pri:0, instance:main.java.bank.testcases.user.ministatement.MiniStatement@7cd62f43]">verifyMiniStatement</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/10/09 09:36:11</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;CustomisedStatement.init()[pri:0, instance:main.java.bank.testcases.user.CustomisedStatement@7cd62f43]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1273765644</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/10/09 09:36:38</td>   <td>27109</td> <td>&nbsp;</td><td title="&lt;&lt;CustomisedStatement.tearDown()[pri:0, instance:main.java.bank.testcases.user.CustomisedStatement@7cd62f43]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1273765644</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/10/09 09:36:29</td>   <td>17332</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CustomisedStatement.verifyOnNotExistAccNo()[pri:0, instance:main.java.bank.testcases.user.CustomisedStatement@7cd62f43]">verifyOnNotExistAccNo</td> 
+  <td>main@1273765644</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/10/09 09:36:33</td>   <td>22044</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CustomisedStatement.verifyOnWrongDateInput()[pri:0, instance:main.java.bank.testcases.user.CustomisedStatement@7cd62f43]">verifyOnWrongDateInput</td> 
+  <td>main@1273765644</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/10/09 09:36:18</td>   <td>6553</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CustomisedStatement.verifyStatementOnWrongAcc()[pri:0, instance:main.java.bank.testcases.user.CustomisedStatement@7cd62f43]">verifyStatementOnWrongAcc</td> 
+  <td>main@1273765644</td>   <td></td> </tr>
 </table>
